[gd_scene load_steps=2 format=3 uid="uid://bocny7msdn5h0"]

[ext_resource type="Script" path="res://script/stop_menu.gd" id="1_yvkit"]

[node name="stop_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvkit")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.167
anchor_bottom = 0.245
offset_left = 319.0
offset_top = 64.0
offset_right = 640.616
offset_bottom = 424.24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 65
text = "Resume"
icon_alignment = 1

[node name="exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 65
text = "Main menu"
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
